// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb demo -- backbutton 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb 1`] = `
.emotion-68 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-68:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-68:hover a.uc-fe-breadcrumb-item,
.emotion-68:hover a.uc-fe-breadcrumb-item:hover,
.emotion-68:hover a.uc-fe-breadcrumb-item:visited,
.emotion-68:hover a.uc-fe-breadcrumb-item:link,
.emotion-68:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-44 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-44:link,
.emotion-44:visited {
  color: #526075;
}

.emotion-44:hover,
.emotion-44:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-41 {
  vertical-align: baseline;
}

.emotion-48 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-50 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-54 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-58 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-58,
.emotion-58:hover,
.emotion-58:visited,
.emotion-58:link,
.emotion-58:active {
  color: #6b798e;
}

.emotion-66 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-39 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-39 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-31 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-31 .uc-fe-radio-styletype-default,
.emotion-31 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-default:last-child,
.emotion-31 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-31 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-31 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-19 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-19 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-19:hover .uc-fe-radio-icon-wrap,
.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-19.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-68 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-68:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-68:hover a.uc-fe-breadcrumb-item,
.emotion-68:hover a.uc-fe-breadcrumb-item:hover,
.emotion-68:hover a.uc-fe-breadcrumb-item:visited,
.emotion-68:hover a.uc-fe-breadcrumb-item:link,
.emotion-68:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-44 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-44:link,
.emotion-44:visited {
  color: #526075;
}

.emotion-44:hover,
.emotion-44:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-41 {
  vertical-align: baseline;
}

.emotion-48 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-50 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-54 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-58 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-58,
.emotion-58:hover,
.emotion-58:visited,
.emotion-58:link,
.emotion-58:active {
  color: #6b798e;
}

.emotion-66 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-39 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-39 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-31 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-31 .uc-fe-radio-styletype-default,
.emotion-31 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-default:last-child,
.emotion-31 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-31 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-31 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-31 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-31 .uc-fe-radio-styletype-list:last-of-type {
  margin-bottom: 8px;
}

.emotion-19 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-19 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-19:hover .uc-fe-radio-icon-wrap,
.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-19.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-39 emotion-40"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        separator
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-5 emotion-6"
        >
          <span
            class="emotion-3 emotion-4"
          >
            <input
              value="/"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="emotion-31 emotion-201"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              block-hover
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              hover
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              active
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-68 emotion-69"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-43 emotion-44 emotion-45"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-41 emotion-42"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-48 emotion-49"
      >
        <i
          class="uc-fe-icon icon__home emotion-41 emotion-42"
        />
      </span>
      <span
        class="emotion-50 emotion-51"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-54 emotion-49"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-41 emotion-42"
        />
      </span>
      <span
        class="emotion-50 emotion-51"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-58 emotion-59"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-50 emotion-51"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-54 emotion-49"
      >
        reload
      </span>
      <span
        class="emotion-50 emotion-51"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-66 emotion-49"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-separator 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      />
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        &gt;&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        -&gt;
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-0 emotion-1"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-0 emotion-1"
        />
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-0 emotion-1"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        <i
          class="uc-fe-icon icon__caret-right emotion-0 emotion-1"
        />
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb-styleType 1`] = `
.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-56 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-56 span.uc-fe-breadcrumb-item:hover,
.emotion-56 a.uc-fe-breadcrumb-item:hover {
  color: #3555f6;
}

.emotion-85 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-85 span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-85 a.uc-fe-breadcrumb-item,
.emotion-85 a.uc-fe-breadcrumb-item:hover,
.emotion-85 a.uc-fe-breadcrumb-item:visited,
.emotion-85 a.uc-fe-breadcrumb-item:link,
.emotion-85 a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-27:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-27:hover a.uc-fe-breadcrumb-item,
.emotion-27:hover a.uc-fe-breadcrumb-item:hover,
.emotion-27:hover a.uc-fe-breadcrumb-item:visited,
.emotion-27:hover a.uc-fe-breadcrumb-item:link,
.emotion-27:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-3:link,
.emotion-3:visited {
  color: #526075;
}

.emotion-3:hover,
.emotion-3:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-9 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-17 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17:link,
.emotion-17:active {
  color: #6b798e;
}

.emotion-25 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-56 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-56 span.uc-fe-breadcrumb-item:hover,
.emotion-56 a.uc-fe-breadcrumb-item:hover {
  color: #3555f6;
}

.emotion-85 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-85 span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-85 a.uc-fe-breadcrumb-item,
.emotion-85 a.uc-fe-breadcrumb-item:hover,
.emotion-85 a.uc-fe-breadcrumb-item:visited,
.emotion-85 a.uc-fe-breadcrumb-item:link,
.emotion-85 a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-27 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-56 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-85 emotion-28"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-2 emotion-3 emotion-4"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-0 emotion-1"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-7 emotion-8"
      >
        <i
          class="uc-fe-icon icon__home emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-0 emotion-1"
        />
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <a
        class="uc-fe-breadcrumb-item emotion-17 emotion-18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-13 emotion-8"
      >
        reload
      </span>
      <span
        class="emotion-9 emotion-10"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-25 emotion-8"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item 1`] = `
.emotion-47 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-47:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-47:hover a.uc-fe-breadcrumb-item,
.emotion-47:hover a.uc-fe-breadcrumb-item:hover,
.emotion-47:hover a.uc-fe-breadcrumb-item:visited,
.emotion-47:hover a.uc-fe-breadcrumb-item:link,
.emotion-47:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-27:link,
.emotion-27:visited {
  color: #526075;
}

.emotion-27:hover,
.emotion-27:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-24 {
  vertical-align: baseline;
}

.emotion-33 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-31 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-45 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-22 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-22 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-47 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-47:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-47:hover a.uc-fe-breadcrumb-item,
.emotion-47:hover a.uc-fe-breadcrumb-item:hover,
.emotion-47:hover a.uc-fe-breadcrumb-item:visited,
.emotion-47:hover a.uc-fe-breadcrumb-item:link,
.emotion-47:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-27 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  line-height: 24px;
  padding: 0 8px;
  color: #526075;
  fill: #526075;
  border-color: #d2d6ea;
  background: #fafafc;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 22px;
  margin-right: 16px;
  padding: 0 5px;
}

.emotion-27:link,
.emotion-27:visited {
  color: #526075;
}

.emotion-27:hover,
.emotion-27:active {
  color: #3860f4;
  fill: #3860f4;
  border-color: #3357df;
  background: #ffffff;
}

.emotion-24 {
  vertical-align: baseline;
}

.emotion-33 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.emotion-31 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-45 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-22 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-22 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-22 emotion-23"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        current
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        noAction
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-47 emotion-48"
    >
      <button
        class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray uc-fe-breadcrumb-back-btn emotion-26 emotion-27 emotion-28"
        type="left"
      >
        <i
          class="uc-fe-icon icon__left uc-fe-button-icon emotion-24 emotion-25"
        />
      </button>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        <i
          class="uc-fe-icon icon__home emotion-24 emotion-25"
        />
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        <i
          class="uc-fe-icon icon__uhost emotion-24 emotion-25"
        />
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-31 emotion-32"
      >
        custom
      </span>
      <span
        class="emotion-33 emotion-34"
      >
        /
      </span>
      <span
        class="uc-fe-breadcrumb-item emotion-45 emotion-32"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-current 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-disabled 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb !important;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb !important;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
        disabled=""
      >
        Home
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item-noAction 1`] = `
.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-2 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.emotion-2:hover span.uc-fe-breadcrumb-item {
  color: #3555f6;
}

.emotion-2:hover a.uc-fe-breadcrumb-item,
.emotion-2:hover a.uc-fe-breadcrumb-item:hover,
.emotion-2:hover a.uc-fe-breadcrumb-item:visited,
.emotion-2:hover a.uc-fe-breadcrumb-item:link,
.emotion-2:hover a.uc-fe-breadcrumb-item:active {
  color: #3555f6;
}

.emotion-4 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-0 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class=" emotion-2 emotion-3"
    >
      <span
        class="uc-fe-breadcrumb-item emotion-4 emotion-1"
      >
        Home
      </span>
    </div>
  </div>
</div>
`;
